objects/NotificationEngine__mdt/NotificationEngine__mdt.object-meta.xml
<CustomObject>
    <label>Notification Engine</label>
    <pluralLabel>Notification Engine</pluralLabel>
</CustomObject>