objects/NotificationEngine__mdt/fields/FinalStatus__c.field-meta.xml
<CustomField>
    <fullName>FinalStatus__c</fullName>
    <label>Final Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>