objects/NotificationEngine__mdt/fields/InitialStatus__c.field-meta.xml
<CustomField>
    <fullName>InitialStatus__c</fullName>
    <label>Initial Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>