objects/NotificationEngine__mdt/fields/NotificationBody__c.field-meta.xml
<CustomField>
    <fullName>NotificationBody__c</fullName>
    <label>Notification Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>