objects/NotificationEngine__mdt/fields/NotificationSubject__c.field-meta.xml
<CustomField>
    <fullName>NotificationSubject__c</fullName>
    <label>Notifcation Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>