objects/NotificationEngine__mdt/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>