objects/NotificationEngine__mdt/fields/SourceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SourceFieldAPIName__c</fullName>
    <label>Source Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>